packages/app/src/modules/declaration-remuneration/shared/common.module.scss
.mentionGrey {
	color: var(--text-mention-grey);
}

.fontMedium {
	font-weight: 500;
}

.fontRegular {
	font-weight: 400;
}

.flexColumn {
	display: flex;
	flex-direction: column;
}

.flexColumnGapHalf {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}

.flexColumnGap1 {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.flexColumnGap2 {
	display: flex;
	flex-direction: column;
	gap: 2rem;
}

.dataSection {
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
}

.flexRowCenter {
	display: flex;
	align-items: center;
	gap: 0.5rem;
}

.flexBetween {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.flexBaseline {
	display: flex;
	align-items: baseline;
	gap: 0.5rem;
}

